# fed-sentiment

./: README.md  adding_minutes.ipynb  adding_speeches.ipynb  api_calls.py  app.py  back_to_basic_testing.ipynb  demo.ipynb  getting_results.ipynb  looking_at_results.ipynb  model_testing.ipynb  model_training.ipynb  press_conference_dates.txt  pyproject.toml  running_model.ipynb  running_model.py  temp.parquet  test.csv  test.txt  test.xlsx  testing.ipynb  testing.py  testing_3.5.ipynb  title_classifications.json  title_classifications.txt  tokenisation.py  training_data_reasoning.ipynb  training_data_reasoning.py
data/data_scraping/: important_words.txt
data/data_scraping/press_conferences/: press_conference_dates.txt
data/data_scraping/scraped_data/: press_conferences.parquet
data/data_scraping/scraping_code/: data_formatting.ipynb  fed_speech_scraping.py  getting_press_conferences.py  press_conference_scraping.py  speech_scraping.py
data/prompts/: fine_tune_prompt_0.txt  fine_tune_prompt_1.txt  fine_tune_prompt_2.txt  title_filter_prompt.txt  zero_shot_prompt_0.txt  zero_shot_prompt_1.txt
data/results/: test_results_large_raw_system_0.csv  test_results_small_filtered.csv  trillion_dollar_words_results.csv
data/results/fine_tune_large/: fine_tuned_20110427.json  (+17 more)
data/scraping/: all_fed_speeches_2020_to_2023.parquet  fed_chairs.txt  fed_speech_scraping.py  press_conference_dates.txt  speech_dates.txt
data/training/: training_data.csv  training_data.jsonl
data/training_data/: training_data.csv  training_data.jsonl  training_data_annotated.csv
(+1191 files in other folders)
